@@ -1567,11 +1567,25 @@
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2014-12-03</date>
+   <date>2015-02-10</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [mms] Rate-limit filters drag/drop changes to prevent race conditions (Bug #13819).
 * [mms] Fix filter drag/drop ordering working in basic view (Bug #13820).
 * [mms] Maildir requires UTF7-IMAP encoding for folder names (Bug #13378).
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>3.2.5</release>
+    <api>3.2.0</api></version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api></stability>
+   <date>2015-02-10</date>
+   <license uri="http://www.horde.org/licenses/apache">ASL</license>
+   <notes>
+* [jan] Fix Sieve error if days of vacation is unset (Bug #13890).
    </notes>
   </release>
   <release>
